syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option java_multiple_files = true;
option java_package = "com.bilibili.gateway2.common.protobuf";

service Gateway2Server {
    rpc sendList (EventList) returns (Response) {
    }

    rpc send (SimpleEvent) returns (Response) {
    }
}

enum StatusCode {
    NULL = 0;
    SUCCESS = 200;
    LOAD_FULL = 429;
}

message SimpleEvent {
    string logId = 1;
    string outerId = 2;
    map<string, string> header = 3;
    bytes data = 4;
}

message EventList {
    repeated SimpleEvent events = 1;
}

message Response {
    StatusCode code = 1;
    string msg = 2;
}